# spamdyke

./: .gitignore
documentation/: Changelog.txt  FAQ.html  GNUGPL.txt  INSTALL.txt  README.html  README_ip_file_format.html  README_rdns_directory_format.html  README_rdns_file_format.html  README_spamdyke_qrv.html  UPGRADING.txt  UPGRADING_version_3_to_version_4.txt  UPGRADING_version_4_to_version_5.txt  policy.php.example  spamdyke.conf.basic  spamdyke.conf.example
spamdyke/: Makefile.in  README.txt  base64.c  base64.h  cdb.c  cdb.h  config.h.in  config_test.c  config_test.h  configuration.c  configuration.h  configure  configure.ac  dns.c  dns.h  environment.c  environment.h  exec.c  exec.h  filter.c  filter.h  log.c  log.h  md5.c  md5.h  search_fs.c  search_fs.h  spamdyke.c  spamdyke.h  tls.c  tls.h  usage.c  usage.h
spamdyke-qrv/: Makefile.in  README.txt  array-qrv.c  array-qrv.h  cdb-qrv.c  cdb-qrv.h  config-qrv.h.in  configuration-qrv.c  configuration-qrv.h  configure  configure.ac  environment-qrv.c  environment-qrv.h  exec-qrv.c  exec-qrv.h  fs-qrv.c  fs-qrv.h  log-qrv.c  log-qrv.h  spamdyke-qrv.c  spamdyke-qrv.h  usage-qrv.c  usage-qrv.h  validate-qrv.c  validate-qrv.h
